// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="profilesstyle__Container-sc-13xty57-0 hNSpnN"
>
  <h1
    class="profilesstyle__Title-sc-13xty57-1 beOjOV"
  >
    Who's watching?
  </h1>
  <ul
    class="profilesstyle__List-sc-13xty57-2 hbVweq"
  >
    <li
      class="profilesstyle__Item-sc-13xty57-5 hlGYDQ"
    >
      <img
        class="profilesstyle__Picture-sc-13xty57-4 gPzRux"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="profilesstyle__Name-sc-13xty57-3 hkuCTC"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="profilesstyle__Container-sc-13xty57-0 hNSpnN"
>
  <h1
    class="profilesstyle__Title-sc-13xty57-1 beOjOV"
  >
    Who's watching?
  </h1>
  <ul
    class="profilesstyle__List-sc-13xty57-2 hbVweq"
  >
    <li
      class="profilesstyle__Item-sc-13xty57-5 hlGYDQ"
    >
      <img
        class="profilesstyle__Picture-sc-13xty57-4 gPzRux"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="profilesstyle__Name-sc-13xty57-3 hkuCTC"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;
